# modularsynth

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  deepcodecheck.ps1  modular_synth.code-workspace
app/: Main.cpp  config.h
examples/Nodes/: EmbeddedGraphView.cpp  EmbeddedGraphView.h  NodePanel.h  OutListener.h  nodes.h
lib/libmodularsynth/: CMakeLists.txt
lib/libmodularsynth/cmake/: libmodularsynthConfig.cmake.in
lib/libmodularsynth/include/modularsynth/: IModularComponent.h  ModularAPI.h
lib/libmodularsynth/src/modularsynth/: IModularComponent.cpp  Module.cpp
lib/nodesystem/: CMakeLists.txt
lib/nodesystem/examples/: SampleHostedComponentsExample.h
lib/nodesystem/include/nodesystem/: Graph.h  GraphNodeEditor.h  GraphNodeView.h  GraphViewComponent.h  GraphViewTheme.h  HostNodeComponent.h  NodeComponent.h  NodeDefinition.h  NodeSystemAPI.h  NodeViewComponent.h  SelectionComponent.h  UnboundWireComponent.h  WireComponent.h  nodesystem.h
lib/nodesystem/src/nodesystem/: Graph.cpp  GraphNodeView.cpp  GraphViewComponent.cpp  HostNodeComponent.cpp  NodeComponent.cpp  NodeDefinition.cpp  NodeViewComponent.cpp  SelectionComponent.cpp  UnboundWireComponent.cpp  WireComponent.cpp
src/: Main.cpp  MainComponent.cpp  MainComponent.h  ModularAPI.h  SynthKeyboardComponent.cpp  SynthKeyboardComponent.h  Utilities.h  common.h  config.h
src/AudioProcessors/: AudioProcessors.h  Filter.h  Gain.h  Oscillator.h  ProcessorBase.h
src/Components/: MainComponent.cpp  MainComponent.h
src/Components/ModularComponent/: ModularComponent.cpp  ModularComponent.h
src/Components/Settings/: AudioSettingsComponent.cpp  AudioSettingsComponent.h  SettingsComponent.cpp  SettingsComponent.h  SettingsView.cpp  SettingsView.h
src/Components/SynthKeyboard/: AudioLiveScrollingDisplay.h  SynthKeyboardComponent.cpp  SynthKeyboardComponent.h
src/Models/: FunctionListener.h  IModularComponent.h  Module.cpp  Module.h
src/Models/Synthesizer/: SynthAudioSource.h
src/ModularSystem/: ModularAudioProcessor.cpp  ModularAudioProcessor.h  ModularComponent.cpp  ModularComponent.h  ModularGraphView.cpp  ModularGraphView.h
src/ModularSystem/AudioProcessors/: AudioProcessors.h  Filter.h  Gain.h  ModuleParameterView.cpp  ModuleParameterView.h  ModuleProcessor.h  Oscillator.h
src/ModularSystem/Modules/: AudioInputNode.h  AudioOutputNode.h  FilterNode.h  MidiInputNode.h  MidiOutputNode.h  Module.h  Modules.h  OscillatorNode.h
src/ModularSystem/NodeSystem/: Graph.cpp  Graph.h  GraphViewTheme.h  NodeDefinition.cpp  NodeDefinition.h  NodeInfo.h  nodesystem.h
src/ModularSystem/NodeSystem/Components/: HostNodeComponent.cpp  HostNodeComponent.h  NodeComponent.cpp  NodeComponent.h  NodeViewComponent.cpp  NodeViewComponent.h  SelectionComponent.cpp  SelectionComponent.h  UnboundWireComponent.cpp  UnboundWireComponent.h  WireComponent.cpp  WireComponent.h
src/Modules/: AudioInputNode.h  AudioOutputNode.h  MidiInputNode.h  MidiOutputNode.h  Module.h  Modules.h  OscillatorNode.h
src/NodeSystem/: ModularComponent.cpp  ModularComponent.h  ModularNodeGraph.cpp  ModularNodeGraph.h  NodeInfo.cpp  NodeInfo.h  ProcessorBase.h  SampleHostedComponents.cpp  SampleHostedComponents.h
src/NodeSystem/AudioProcessors/: Filter.h  Gain.h  Oscillator.h  _processor_common.h
src/NodeSystem/Nodes/: EmbeddedGraphView.cpp  EmbeddedGraphView.h  NodePanel.cpp  NodePanel.h  OscillatorNode.cpp  OscillatorNode.h  OutListener.cpp  OutListener.h  WaveformNode.cpp  WaveformNode.h  nodes.h
src/Services/: UserSettings.cpp  UserSettings.h
src/Settings/: AudioSettingsComponent.cpp  AudioSettingsComponent.h  SettingsComponent.cpp  SettingsComponent.h
src/Synthesizer/: AudioSource.h  Voice.h
src/app/: Main.cpp  config.h
src/app/config/: Layout.h  Palette.h
src/config/: Layout.h  Palette.h
tests/: JuceDefaults.cpp  sizes.cpp
